--- a/thesis/intro/intro.tex
+++ b/thesis/intro/intro.tex
@@ -19,13 +19,18 @@
 	%rare but present in 1978 in SF \citep{Echenberg1985} and NYC \citep{Stevens}
 	%Antia 2003 Nature evolve in chain of transmission with R0<1
 
-	The successful trial of the reverse transcriptase inhibitor azidothymidine provided the first hope for treatment HIV in 1987 \citep{Fischl1987,Fischl1989,Volberding1990} but it soon became apparent that the fast mutation rate of HIV \citep{Hahn1986,Preston1988,Roberts1988,Mansky1995,Mansky1996,Abram2010,Achuthan2014} and strong selection by drug therapy could quickly create drug-resistant forms of virus in patients receiving single drug therapy \citep{Larder1989,Larder1989a,Land1990,Boucher1990,Richman1990,Richman1991,Fitzgibbon1992,Richman1994,Schuurman1995,Schmit1996} or even sequential administration of multiple drugs \citep{Kahn1992,Abrams1994,deJong1994,Schmit1996a}. Synergistic combinations of antiretroviral drugs \citep{Dornsife1991,Johnson1991,Cox1994,Feng2009,Jilek2012,Kulkarni2014} and the difficulty of evolving multiple drug resistant mutations therapy \citep{Chow1993,Larder1995} [[more refs here]] meant that therapy using simultaneous combinations of drugs finally began to offer patients more hope of long term survival \citep{Collier1993,Eron1995,Collier1996,Hammer1996,Saravolatz1996,Darbyshire1996,Hammer1997,Gulick1997,Moore1999}.
 
 	%global epidemic ("transmission partners") \citep{Wertheim2014}
 
 	%larder1993 multidrug resistant mutations in vitro
 
-	Median survival after diagnosis with AIDS of about 1 year untreated \citep{Rothenberg1987,Vella1992} and around 2 years with AZT treatment \citep{Creagh-Kirk1988,Fischl1989,Moore1992,Vella1992}. In patients in Haiti treated for symptoms but not with antiretrovirals, the median time to AIDS was 5.2 years and to death was 7.4 years \citep{Deschamps2000}. Many types of opportunistic infections and poor survival times \citep{Moore1996}. 4.5 years to AIDS in transfusions \citep{Lui1986}.
+	In the early days of the epidemic before there were tests to detect the virus, the first sign of HIV was often the onset of AIDS. Opportunistic infections \citep{Moore1996} and death often followed soon after. The median survival time after diagnosis with AIDS was about 1 year if untreated \citep{Rothenberg1987,Vella1992}. Testing for HIV revealed that from the time of infection with HIV, patients had a median survival time of about 10 years without antiretroviral therapy\citep{Deschamps2000,CGAIDSIHIVS2000}. %In patients in Haiti treated for symptoms but not with antiretrovirals, the median time to AIDS was 5.2 years and to death was 7.4 years \citep{Deschamps2000}. Median time to death 7--12 years \citep{CGAIDSIHIVS2000}. %Many types of opportunistic infections and poor survival times \citep{Moore1996}. 4.5 years to AIDS in transfusions \citep{Lui1986}.
+
+	The successful trial of the reverse transcriptase inhibitor azidothymidine provided the first hope for treatment HIV in 1987 \citep{Fischl1987,Fischl1989,Volberding1990} but it soon became apparent that the fast mutation rate of HIV \citep{Hahn1986,Preston1988,Roberts1988,Mansky1995,Mansky1996,Abram2010,Achuthan2014} and strong selection by drug therapy could quickly create drug-resistant forms of virus in patients receiving single drug therapy \citep{Larder1989,Larder1989a,Land1990,Boucher1990,Richman1990,Richman1991,Fitzgibbon1992,Richman1994,Schuurman1995,Schmit1996}. Median survival time from AIDS diagnosis rose to only about 2 years with therapy \citep{Creagh-Kirk1988,Fischl1989,Moore1992,Vella1992}. Sequential administration of multiple antiretroviral drugs \citep{Kahn1992,Abrams1994,deJong1994,Schmit1996a} did not greatly improve prognosis.
+	 
+	. Synergistic combinations of antiretroviral drugs \citep{Dornsife1991,Johnson1991,Cox1994,Feng2009,Jilek2012,Kulkarni2014} and the difficulty of evolving multiple drug resistant mutations therapy \citep{Chow1993,Larder1995} [[more refs here]] meant that therapy using simultaneous combinations of drugs finally began to offer patients more hope of long term survival \citep{Collier1993,Eron1995,Collier1996,Hammer1996,Saravolatz1996,Darbyshire1996,Hammer1997,Gulick1997,Moore1999}.
+
+	The first antiretroviral azidothymidine extended the median survival time after AIDS onset to about 2 years but viral escape from single therapy was common \citep{Creagh-Kirk1988,Fischl1989,Moore1992,Vella1992}.  
 	%moore1992 survive >900 days median if >150 CD4 baseline
 
 	%Sharp2001 HIV m n o three separate cpz
