--- a/thesis/lamp/lamp.tex
+++ b/thesis/lamp/lamp.tex
@@ -45,7 +45,7 @@
 			\begin{figure}
 			\centering
 				\includegraphics[height=.8\textheight]{heat.pdf} %REMOVE%
-			\caption[Summary of amplification results for all the RT-LAMP primer sets tested in this study]{Summary of amplification results for all the RT-LAMP primer sets tested in this study. The data is shown as a heat map, with more intense yellow coloring indicating shorter amplification times (key at bottom). Primer sets tested are named along the left of the figure. Primer sequences, and their organization into LAMP primer sets, are cataloged in S1 and S2 Tables. The raw data and averaged data are collected in S3 and S4 Tables. ACeIN-26 primer set (highlighted) had one of the best performances across the subtypes and a relatively simple primer design.}
+			\caption[Amplification results for all RT-LAMP primer sets tested]{Summary of amplification results for all the RT-LAMP primer sets tested in this study. The data is shown as a heat map, with more intense yellow coloring indicating shorter amplification times (key at bottom). Primer sets tested are named along the left of the figure. Primer sequences, and their organization into LAMP primer sets, are cataloged in S1 and S2 Tables. The raw data and averaged data are collected in S3 and S4 Tables. ACeIN-26 primer set (highlighted) had one of the best performances across the subtypes and a relatively simple primer design.}
 			\label{figPrimers}
 			\end{figure}
 
@@ -90,7 +90,7 @@
 			\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top}}}]{figure}[\FBwidth]{
 				\includegraphics[width=.6\textwidth]{4.pdf} %REMOVE%
 				}{
-					\caption[Examples of time course assays, displaying replicate tests of RT-LAMP primer set ACeIN-26 tested over six HIV subtypes, used in Z-factor calculations]{Examples of time course assays, displaying replicate tests of RT-LAMP primer set ACeIN-26 tested over six HIV subtypes, used in Z-factor calculations. A total of 5000 RNA copies were tested in each 15 \uL{} reaction. Time is shown on the x-axis, Fluorescence intensity on the y-axis. Replicates are distinguished using an arbitrary color code. Z-factor values and standard deviations are shown on each panel.}
+					\caption[Replicate tests of the ACeIN-26 primer set over six HIV subtypes]{Examples of time course assays, displaying replicate tests of RT-LAMP primer set ACeIN-26 tested over six HIV subtypes, used in Z-factor calculations. A total of 5000 RNA copies were tested in each 15 \uL{} reaction. Time is shown on the x-axis, Fluorescence intensity on the y-axis. Replicates are distinguished using an arbitrary color code. Z-factor values and standard deviations are shown on each panel.}
 					\label{figZFactor}
 				}
 			\end{figure}
