--- a/thesis/penn_thesis_style.sty
+++ b/thesis/penn_thesis_style.sty
@@ -167,6 +167,10 @@
 %to get side captions on tall figures
 \usepackage{floatrow}
 
+%caption shrinking
+\usepackage{caption}
+\captionsetup{font={stretch=.9}}
+
 
 \usepackage{listings} %for reproducible report
 \usepackage{color} %for reproducible report appendices
